# velecs-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  HarvestHavoc.sln  HarvestHavoc.vcxproj  HarvestHavoc.vcxproj.filters  Makefile  README.md  WinMain.cpp  exec-cloc.sh
HarvestHavoc/: HarvestHavoc.vcxproj  HarvestHavoc.vcxproj.filters
HarvestHavoc/build_scripts/: ExportRequiredDLLs.ps1
HarvestHavoc/build_tools/: CleanDLLs.targets  CleanShaders.targets
assets/: CMakeLists.txt
cmake/: AssetUtility.cmake  ProcessAssets.cmake
harvest_havoc/: CMakeLists.txt  HarvestHavoc.vcxproj  HarvestHavoc.vcxproj.filters
harvest_havoc/assets/: CMakeLists.txt
harvest_havoc/assets/meshes/: CMakeLists.txt
harvest_havoc/assets/meshes/source/: primitive_meshes.blend  primitive_meshes.blend1
harvest_havoc/assets/meshes/source/presets/: README.md
harvest_havoc/assets/meshes/source/presets/Blender Foundation/Blender/3.6/scripts/presets/operator/wm.obj_export/: Velecs_Export_Preset.py
harvest_havoc/assets/shaders/: CMakeLists.txt
harvest_havoc/assets/shaders/vert/: Simple2DMesh.vert
harvest_havoc/build_scripts/: CompileShaders.ps1
harvest_havoc/build_tools/: CleanAssets.targets
harvest_havoc/include/ECS/: ECSCommon.h  ECSManager.h  IECSInterface.h  IPhysicsECS.h  IRenderingECS.h  InputECSModule.h  PhysicsECS.h  PhysicsECSModule.h  RenderingECS.h  RenderingECS.h.DISABLED
harvest_havoc/include/ECS/Components/: Input.h  Nametag.h  PipelineStages.h  Player.h
harvest_havoc/include/ECS/Components/Physics/: AngularKinematics.h  LinearKinematics.h
harvest_havoc/include/ECS/Components/Rendering/: MainCamera.h  Material.h  Mesh.h  OrthoCamera.h  PerspectiveCamera.h  Transform.h
harvest_havoc/include/ECS/Components/Resources/: Iron.h  IronNode.h  IronVein.h
harvest_havoc/include/ECS/Modules/: EnvironmentECSModule.h  IECSModule.h  InputECSModule.h  NametagECSModule.h  PhysicsECSModule.h  PipelineECSModule.h  PlayerECSModule.h  RenderingECSModule.h
harvest_havoc/include/Input/: Input.h  Input.h.DISABLED  MenuInputActionMap.h.DISABLED  PlayerInputActionMap.h  PlayerInputActionMap.h.DISABLED
harvest_havoc/shaders/vert/: triangle.vert
harvest_havoc/src/: Main.cpp
harvest_havoc/src/ECS/: ECSManager.cpp  InputECSModule.cpp  PhysicsECS.cpp  PhysicsECSModule.cpp  PipelineECSModule.cpp  RenderingECS.cpp  RenderingECS.cpp.DISABLED
harvest_havoc/src/ECS/Components/: Input.cpp  Nametag.cpp
harvest_havoc/src/ECS/Modules/: EnvironmentECSModule.cpp  InputECSModule.cpp  NametagECSModule.cpp  PhysicsECSModule.cpp  PipelineECSModule.cpp  PlayerECSModule.cpp  RenderingECSModule.cpp
harvest_havoc/src/Input/: Input.cpp.DISABLED  MenuInputActionMap.cpp  MenuInputActionMap.cpp.DISABLED  PlayerInputActionMap.cpp  PlayerInputActionMap.cpp.DISABLED
harvest_havoc/templates/glsl/: Template.frag  Template.vert
include/: vk_engine.h
include/Input/: Event.h  (+2 more)
libs/: CMakeLists.txt
libs/flecs/: flecs.c
libs/imgui/: imgui_impl_sdl.cpp  imgui_impl_vulkan.cpp  imgui_widgets.cpp
libs/vkbootstrap/: VkBootstrap.h
solution/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  velecs.sln
src/: Engine.cpp  Main.cpp  vk_engine.cpp
velecs/: CMakeLists.txt  VelECS.cpp  VelECS.vcxproj  VelECS.vcxproj.filters
velecs/assets/meshes/: CMakeLists.txt
velecs/assets/shaders/frag/: Simple2DMesh.frag
velecs/include/: VelECSEngine.h
velecs/include/Core/: GameExceptions.h  IEnableDisable.h
velecs/include/Graphics/: Color32.h  Rect.h
velecs/include/Input/: IInput.h  InputAction.h  InputActionMap.h
velecs/include/Math/: Vec2.h
velecs/include/Memory/: AllocatedBuffer.h  DeletionQueue.h
velecs/include/velecs/: Debug.h  VelECSEngine.h
velecs/include/velecs/Core/: Event.h.DISABLED  IEnableDisable.h.DISABLED
velecs/include/velecs/ECS/: Entity.h  IECSInterface.h  IECSManager.h  IPhysicsECS.h  IRenderingECS.h  IRenderingECS.h.DISABLED  Prefab.h
velecs/include/velecs/ECS/Components/: Input.h  PipelineStages.h
velecs/include/velecs/ECS/Components/Rendering/: Camera.h  MainCamera.h  Material.h  Mesh.h  OrthoCamera.h  PerspectiveCamera.h  SimpleMesh.h  Transform.h
velecs/include/velecs/ECS/Modules/: IECSModule.h  InputECSModule.h  PhysicsECSModule.h  PipelineECSModule.h  RenderingECSModule.h
velecs/include/velecs/FileManagement/: File.h  Path.h
velecs/include/velecs/Graphics/: Color32.h  Rect.h
velecs/include/velecs/Input/: IEnableDisablePassKey.h.DISABLED  IInput.h  IInput.h.DISABLED  InputAction.h.DISABLED  InputActionMap.h
velecs/include/velecs/Math/: Consts.h  Vec2.h  Vec3.h
velecs/include/velecs/Memory/: AllocatedBuffer.h  DeletionQueue.h
velecs/include/velecs/Rendering/: MeshPushConstants.h  PipelineBuilder.h  ShaderModule.h  SimpleVertex.h  Vertex.h
velecs/src/Core/: IEnableDisable.cpp
velecs/src/FileManagement/: Directory.cpp  Path.cpp
velecs/src/Graphics/: Color32.cpp  Rect.cpp
velecs/src/Input/: IInput.cpp  InputAction.cpp  InputActionMap.cpp
velecs/src/Math/: Vec2.cpp
velecs/src/Rendering/: PipelineBuilder.cpp
velecs/src/velecs/: VelECSEngine.cpp  pch.cpp
velecs/src/velecs/Core/: IEnableDisable.cpp  IEnableDisable.cpp.DISABLED
velecs/src/velecs/ECS/: Entity.cpp  IECSInterface.cpp  IECSManager.cpp  IRenderingECS.cpp  Prefab.cpp
velecs/src/velecs/ECS/Components/: Input.cpp
velecs/src/velecs/ECS/Components/Rendering/: SimpleMesh.cpp  Transform.cpp
velecs/src/velecs/ECS/Modules/: CommonECSModule.cpp  InputECSModule.cpp  PhysicsECSModule.cpp  PipelineECSModule.cpp  RenderingECSModule.cpp
velecs/src/velecs/Engine/: vk_initializers.cpp
velecs/src/velecs/FileManagement/: Directory.cpp  File.cpp  Path.cpp
velecs/src/velecs/Graphics/: Color32.cpp  Rect.cpp
velecs/src/velecs/Input/: IInput.cpp.DISABLED  InputAction.cpp.DISABLED  InputActionMap.cpp.DISABLED
velecs/src/velecs/Math/: Vec2.cpp  Vec3.cpp
velecs/src/velecs/Memory/: AllocatedBuffer.cpp  DeletionQueue.cpp
velecs/src/velecs/Rendering/: PipelineBuilder.cpp  ShaderModule.cpp  SimpleVertex.cpp  Vertex.cpp
(+262 files in other folders)
