# @file    CMakeLists.txt
# @author  Matthew Green
# @date    2023-11-30 13:48:57
# 
# @section LICENSE
# 
# Copyright (c) 2023 Matthew Green - All rights reserved
# Unauthorized copying of this file, via any medium is strictly prohibited
# Proprietary and confidential

cmake_minimum_required(VERSION 3.10)

add_subdirectory(meshes)
add_subdirectory(shaders)